syntax = "proto3";

option go_package = "github.com/vinayakbot/video";


service VideoService{
    rpc VideoProccess(stream Video) returns (stream CommonResponse);
}

message Video {
    bytes content = 1;
}

message CommonResponse{
    int32 statusCode = 1;
    bool success = 2;
    string message = 3;
}
